...
    final emailController = TextEditingController();

    showDialog(
      context: context,
      builder: (context) {
        return AlertDialog(
          title: Text('Add Friend'),
          content: TextField(
            controller: emailController,
            decoration: InputDecoration(
              labelText: 'Friend Email',
              hintText: 'Enter friend\'s email',
            ),
...
                      return; // Exit if the user doesn't exist
                    }
                    // Use FirestoreService to add friend, this will throw error if the friend is already added
                    await FirestoreService().addFriend(email);
                    await _loadFriends(); // Refresh list
                    ScaffoldMessenger.of(context).showSnackBar(
                      SnackBar(content: Text('Friend added successfully!')),
                    );
                    Navigator.pop(context);
                  } catch (e) {
                    ScaffoldMessenger.of(context).showSnackBar(
                      SnackBar(content: Text('Error: ${e.toString()}')),
                    );
                  }
                }
              },
              child: Text('Add'),
            ),
          ],
        );
      },
    );
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
        appBar: AppBar(
        title: Text(
        'Friends',
        style: TextStyle(fontWeight: FontWeight.bold),
    ),
    flexibleSpace: Container(
    decoration: BoxDecoration(
    gradient: LinearGradient(
    colors: [Color(0xFF6A1B9A), Color(0xFFAB47BC)],
...
